Retrotranslator Changelog
=================================

  - Limited support for java.nio.charset.Charset.defaultCharset().
  - Bug fixed: Enum static field assignment ordered wrong.
  - New -uptodatecheck option to skip translation of files if the destination files are newer.

1.2.1 (2007-02-01)
---------------------------------
  - Support for java.util.Deque and java.util.ArrayDeque.
  - Support for java.util.Arrays.copyOf(...) and java.util.Arrays.copyOfRange(...).
  - Limited support for UNICODE-related methods of Character, String, and StringBuffer.
  - The -backport option accepts individual classes and is used even when -retainapi is specified.

1.2.0 (2007-01-10)
  WARNING: This release is not fully compatible with the previous one.
---------------------------------
  - Supported java.lang.ThreadLocal.remove() in advanced mode.
  - Added -target option for Java 6 to Java 5 translation.
  - Improved bytecode compatibility with different JVMs.
  - Backported java.util.concurrent.locks.LockSupport.
  - Added java.net.Proxy and java.net.ProxySelector.
  - Added java.net.URL.openConnection(Proxy), currenly the argument is ignored.
  - Added java.lang.instrument.* classes, but instrumentation is not supported.
  - Added java.lang.Thread.State enumeration, but Thread.getState() is not implemented.
  - Limited support for DecimalFormat.isParseBigDecimal() and DecimalFormat.setParseBigDecimal(boolean).
  - Removed deprecated Retrotranslator constructor and JITRetrotranslator.install method.
  - Ant task: added nested fileset, jarfileset, and dirset; removed src.
  - Upgraded to backport-util-concurrent 3.0.
  - Signature is being removed when translating signed jars.
  - Retrotranslator runtime depends on backport-util-concurrent.
  - When embedding runtime support, only directly or indirectly referenced classes are being kept.

1.1.0 (2006-11-08)
---------------------------------